syntax = "proto3";
option csharp_namespace = "MySpace.WebAPI.Services";
import "models/member_model.proto";
package my_space;

service Members {

	rpc CreateMember(CreateMemberRequest) returns(CreateMemberResponse);
	rpc Edit(EditMember) returns(CreateMemberResponse);
	rpc Delete(DeleteMemberRequest) returns(DeleteMember);
	rpc GetByIdMember(GetMemberByIdRequest) returns(GetMemberByIdResponse);
	rpc GetAllMembers(GetAllMembersRequest) returns(GetAllMembersResponse);
	
}